# pipfile-requirements

./: .gitignore  .travis.yml  MANIFEST.in  README.md  appveyor.yml  pipfile_requirements.py  pyproject.toml  requirements.txt  setup.py  test_pipfile_requirements.py
pipfile2req/: __init__.py  requirements.py
tests/: Pipfile  dev-requirements-pipfile.txt  dev-requirements.txt  requirements-hashes.txt  requirements-pipfile-sources.txt  requirements-pipfile.txt  requirements-sources.txt  requirements.txt
