[tool.poetry]
name = "pipfile-requirements"
version = "0.1.0post0"
description = "A CLI tool to covert Pipfile/Pipfile.lock to requirments.txt"
authors = ["Frost Ming <mianghong@gmail.com>"]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/frostming/pipfile-requirements"
repository = "https://github.com/frostming/pipfile-requirements"

keywords = ["pipenv", "pipfile", "package-management", "deployment"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
requirementslib = "^1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
pytest = "^4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pipfile2req = "pipfile_requirements:main"
